[gd_scene load_steps=10 format=3 uid="uid://regd4l41fbt5"]

[ext_resource type="Script" path="res://scenes/Shops/FireStation.gd" id="1_bgdxp"]
[ext_resource type="PackedScene" uid="uid://ck17xbn21yrd0" path="res://prefabs/Dialogue/DialoguePlayer/DialoguePlayer.tscn" id="2_famdf"]
[ext_resource type="JSON" path="res://dialogue/Shopkeepers/Zane.json" id="3_vomgy"]
[ext_resource type="Texture2D" uid="uid://dfa2wmooi6l1p" path="res://assets/background/quingsterybgs_firestation.png" id="4_b7any"]
[ext_resource type="Texture2D" uid="uid://b7scac11tqoup" path="res://assets/character/talksprites/quingesterynpc_zane_flats.png" id="5_gmyxw"]
[ext_resource type="PackedScene" uid="uid://desvgeqvimub7" path="res://prefabs/Dialogue/DialogueBox/ShopBox.tscn" id="6_lrm3t"]
[ext_resource type="PackedScene" uid="uid://cm06xatxch52d" path="res://prefabs/UI/ItemMenu/BuyMenu.tscn" id="7_4nuli"]
[ext_resource type="PackedScene" uid="uid://bw7q1cc3tci2i" path="res://prefabs/UI/NavButtons/NavButtons.tscn" id="8_2u8cq"]
[ext_resource type="PackedScene" uid="uid://dom8vrn6qhhpc" path="res://prefabs/UI/StatusInfo/WeatherHUD.tscn" id="9_a8l0e"]

[node name="FireStation" type="Node2D"]
script = ExtResource("1_bgdxp")

[node name="DialoguePlayer" parent="." instance=ExtResource("2_famdf")]
dialogue_file = ExtResource("3_vomgy")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_b7any")
centered = false

[node name="ShopBox" parent="." instance=ExtResource("6_lrm3t")]

[node name="Character" parent="ShopBox/Control" index="0"]
texture = ExtResource("5_gmyxw")

[node name="BuyMenu" parent="." instance=ExtResource("7_4nuli")]
visible = false
offset_right = 960.0
offset_bottom = 540.0

[node name="NavButtons" parent="." instance=ExtResource("8_2u8cq")]
offset_right = 960.0
offset_bottom = 540.0

[node name="Button2" parent="NavButtons/NavList" index="1"]
visible = false

[node name="WeatherHUD" parent="." instance=ExtResource("9_a8l0e")]

[connection signal="pressed" from="NavButtons/NavList/Button1" to="." method="_on_buy_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button2" to="." method="_on_sell_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button3" to="." method="_on_talk_pressed"]
[connection signal="pressed" from="NavButtons/NavList/Button4" to="." method="_on_leave_pressed"]

[editable path="ShopBox"]
[editable path="NavButtons"]
